# comp3702-a1

./: .gitignore  Makefile  README.md  comp3702-a1.cabal  setup.py
a1/: __init__.py  problem.py  util.py
report/: report.tex
src/: Main.hs  Solver.hs
