name:                comp3702-a1
version:             0.1.0.0
synopsis:            COMP3702 Assignment 1
homepage:            https://github.com/TRManderson/comp3702-a1
author:              Tom Manderson
maintainer:          me@trm.io
copyright:           2016 Tom Manderson
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable a1-3702-Tomstan
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Solver
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , text
                     , fgl
                     , split